--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/frame_layout_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
+    android:layout_height="match_parent" >
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
@@ -16,42 +15,23 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/status_title" />
-
-        <EditText
-            android:id="@+id/StatusEditText"
+
+        <fragment
+            android:id="@+id/fragment1"
+            android:name="com.virtusa.androidbootcamp.ComposeFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
-            android:layout_marginTop="20sp"
-            android:layout_weight="0.20"
-            android:gravity="top"
-            android:height="200sp"
-            android:hint="@string/statusHint"
-            android:inputType="textMultiLine" android:padding="5dp">
-
-            <requestFocus />
-        </EditText>
-
-        <TextView
-            android:id="@+id/CharacterCountTextView"
+            android:layout_height="wrap_content">
+            <!-- Preview: layout=@layout/composefragment -->
+        </fragment>
+
+        <Button
+            android:id="@+id/logoutButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginRight="20sp"
-            android:text="Small Text"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        <Button
-            android:id="@+id/PostTweetButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2sp"
-            android:layout_marginLeft="20sp"
-            android:layout_marginRight="20sp"
-            android:layout_marginTop="1sp"
-            android:background="@drawable/buttonbg"
-            android:text="@string/postButtonText" />
+            android:layout_marginRight="10sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/logoutRequestButtonTitle" />
 
     </LinearLayout>
 
