Day 3 end work loaded

--- a/res/layout/logonui.xml
+++ b/res/layout/logonui.xml
@@ -24,8 +24,9 @@
         android:id="@+id/usernameEditText"
         style="@style/promptBox_stye"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
+        android:layout_height="wrap_content" 
+        android:hint="username">
+		
         <requestFocus />
     </EditText>
 
