--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,38 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/frame_layout_parent"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/statusTitleTextView"
-            style="@style/Default_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/status_title" />
-
-        <fragment
-            android:id="@+id/fragment1"
-            android:name="com.virtusa.androidbootcamp.ComposeFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <!-- Preview: layout=@layout/composefragment -->
-        </fragment>
-
-        <Button
-            android:id="@+id/logoutButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginRight="10sp"
-            android:layout_marginTop="10sp"
-            android:text="@string/logoutRequestButtonTitle" />
-
-    </LinearLayout>
-
-</FrameLayout>
+<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="fill_parent"    android:layout_height="match_parent"    android:orientation="vertical" >    <TextView        android:id="@+id/statusTitleTextView"        style="@style/Default_title"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_gravity="center_horizontal"        android:text="@string/status_title" />    <fragment        android:id="@+id/fragment1"        android:name="com.virtusa.androidbootcamp.ComposeFragment"        android:layout_width="match_parent"        android:layout_height="wrap_content" >        <!-- Preview: layout=@layout/composefragment -->    </fragment>    <Button        android:id="@+id/logoutButton"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_gravity="right"        android:layout_marginRight="10sp"        android:layout_marginTop="10sp"        android:text="@string/logoutRequestButtonTitle" /></LinearLayout>
